---------------------------------------------------------------------------------------------------
Version: 1.6.11
Date: 2025-04-30
  Fixes upon fixes:

  Fixes:
    - Fixed crash with Corrundum and AAI Industry. (Thanks Hoho!)
    - Fixed Biomass Reactor not having a spoilage slot and getting stuck on spoilage by STRAIGHT UP MAKING SPOILAGE BURNABLE IN IT. I'm a genius I know -w-. (Thanks Quezler, n1c3wh and Osmo!)
---------------------------------------------------------------------------------------------------
Version: 1.6.10
Date: 2025-04-28
  How:

  Fixes:
    - Fixed crash with Maraxsis.
---------------------------------------------------------------------------------------------------
Version: 1.6.9
Date: 2025-04-28
  New and cooler variables:

  Changes:
    - Products in the Greenhouse won't spoil and will always be fresh.
    - Changed how new tech requirements and science packs are added in compat via new variables and stuff.
---------------------------------------------------------------------------------------------------
Version: 1.6.8
Date: 2025-04-27
  Guess who's back!:

  Changes:
    - Updated compat with the Galore mods.
    - Moved Magnetic Thruster and Advanced Artillery Shell Manufacturing to the Space and Military tabs respectively.
    - Updated Localizations from Crowdin.

  Fixes:
    - Fixed sulfuric acid not being craftable many machines when Cerys was also installed. If you find more issues with this, report them.

  Notes:
    - Atmospheric Sillynes Part 2 will probably be the next patch, unless there's more serious bugs to fix. Wait patiently!
---------------------------------------------------------------------------------------------------
Version: 1.6.7
Date: 2025-04-22
  Planetary fixes:

  Fixes:
    - Fixed coal synthesis not existing in the mineral synthesizer with Maraxsis.
    - Fixed Sulfuric Acid not being craftable in the hydraulic plant with Cerys.

  Notes: