@@ -14,8 +14,8 @@ local function add_tech_effect(tech_name, effect)
   end
 
   add_crafting_categories("assembling-machine", "assembling-machine-1", {"advanced-centrifuging-or-crafting", "advanced-centrifuging-or-crafting-or-electromechanics", "quantum-assembling-or-crafting", "woodworking-or-crafting", "electromechanics-or-crafting", "electronics-or-electromechanics", "pressing-or-electromechanics", "ammunition-or-crafting", "woodworking-or-organic-or-assembling", "organic-or-assembling-or-electromechanics"})
-  add_crafting_categories("assembling-machine", "assembling-machine-2", {"advanced-centrifuging-or-crafting", "advanced-centrifuging-or-crafting-or-electromechanics", "quantum-assembling-or-crafting", "woodworking-or-crafting", "electromechanics-or-crafting", "biochemistry-or-organic-or-hand-crafting", "biochemistry-or-organic-or-assembling", "woodworking-or-organic-or-assembling", "petrochemistry-or-organic-or-assembling" , "electronics-or-electromechanics", "pressing-or-electromechanics", "quantum-assembling-or-crafting-with-fluid", "advanced-centrifuging-or-crafting-with-fluid", "ammunition-or-crafting", "synthesis-or-crafting-with-fluid", "organic-or-assembling-or-electromechanics"})
-  add_crafting_categories("assembling-machine", "assembling-machine-3", {"advanced-centrifuging-or-crafting", "advanced-centrifuging-or-crafting-or-electromechanics", "quantum-assembling-or-crafting", "woodworking-or-crafting", "electromechanics-or-crafting", "biochemistry-or-organic-or-hand-crafting", "biochemistry-or-organic-or-assembling", "woodworking-or-organic-or-assembling", "petrochemistry-or-organic-or-assembling" , "electronics-or-electromechanics", "pressing-or-electromechanics", "quantum-assembling-or-crafting-with-fluid", "advanced-centrifuging-or-crafting-with-fluid", "ammunition-or-crafting", "synthesis-or-crafting-with-fluid", "organic-or-assembling-or-electromechanics"})
+  add_crafting_categories("assembling-machine", "assembling-machine-2", {"advanced-centrifuging-or-crafting", "advanced-centrifuging-or-crafting-or-electromechanics", "quantum-assembling-or-crafting", "woodworking-or-crafting", "electromechanics-or-crafting", "biochemistry-or-organic-or-hand-crafting", "biochemistry-or-organic-or-assembling", "woodworking-or-organic-or-assembling", "petrochemistry-or-organic-or-assembling" , "electronics-or-electromechanics", "pressing-or-electromechanics", "quantum-assembling-or-crafting-with-fluid", "advanced-centrifuging-or-crafting-with-fluid", "ammunition-or-crafting", "synthesis-or-crafting-with-fluid", "organic-or-assembling-or-electromechanics", "ammunition-or-crafting-with-fluid"})
+  add_crafting_categories("assembling-machine", "assembling-machine-3", {"advanced-centrifuging-or-crafting", "advanced-centrifuging-or-crafting-or-electromechanics", "quantum-assembling-or-crafting", "woodworking-or-crafting", "electromechanics-or-crafting", "biochemistry-or-organic-or-hand-crafting", "biochemistry-or-organic-or-assembling", "woodworking-or-organic-or-assembling", "petrochemistry-or-organic-or-assembling" , "electronics-or-electromechanics", "pressing-or-electromechanics", "quantum-assembling-or-crafting-with-fluid", "advanced-centrifuging-or-crafting-with-fluid", "ammunition-or-crafting", "synthesis-or-crafting-with-fluid", "organic-or-assembling-or-electromechanics", "ammunition-or-crafting-with-fluid"})
   add_crafting_categories("assembling-machine", "chemical-plant", {"hydraulics-or-chemistry", "hydraulics-or-chemistry-or-cryogenics", "petrochemistry-or-organic-or-chemistry", "petrochemistry-or-chemistry", "petrochemistry-or-chemistry-or-cryogenics", "synthesis-or-chemistry", "synthesis-or-cryogenics-or-chemistry"})
   add_crafting_categories("assembling-machine", "centrifuge", {"advanced-centrifuging-or-centrifuging"})
   add_crafting_categories("assembling-machine", "oil-refinery", {"petrochemistry-or-oil-processing"})
